[MODORDERS-1015] - changed api and improved model